fix: navbar on mobile

--- a/assets/css/components/navbar.css
+++ b/assets/css/components/navbar.css
@@ -57,9 +57,14 @@
 }
 
 @media (max-width: 1000px) {
+    #navbar-container {
+        background: linear-gradient(90deg, #CA424633, #9195ff33);
+        position: relative;
+    }
+
     #navbar {
         flex-direction: column;
-        padding: 25px 10px;
+        padding: 0px 10px;
     }
 
     #navbar #title a {
